[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.88"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
roxido = { path="roxido" }
rand = "0.10"
rand_pcg = "0.10"
num-traits = "0.2.15"
dahl-partition = "0.5.5"
# dahl-partition = { path="../../../../rust-dahl-partition" }
# dahl-partition = { git="https://github.com/dbdahl/rust-dahl-partition.git", rev="c3a9894b198" }
dahl-bellnumber = "0.1.2"
dahl-salso = "0.6.9"
# dahl-salso = { git="https://github.com/dbdahl/rust-dahl-salso.git", rev="6067e2b" }
# dahl-salso = { path="../../../../rust-dahl-salso" }
rayon = "1.10.0"
ndarray = "0.17.2"
# dbg_step = { path="../../../../rust-dahl-dbg_step" }
