[package]
name = "rustlib"
version = "0.1.0"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# dahl-partition = "0.3.0"
dahl-partition = { git="https://dahl-git.byu.edu/dahl/rust-dahl-partition.git" }
# dahl-partition = { path="/home/dahl/docs/devel/rust-dahl-partition" }
dahl-bellnumber = "0.1.0"
# dahl-salso = "0.1.0"
dahl-salso = { git="https://dahl-git.byu.edu/dahl/rust-dahl-salso.git" }
# dahl-salso = { path="/home/dahl/docs/devel/rust-dahl-salso" }
